--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,19 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.3.5.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
